# irrev-compiler

./: .gitignore  AGENTS.md  Cargo.toml  README.md  action.yml  compiler-docs-audit.md
.admit/: config.toml
.admit/plan/: plan-artifact.json  proposal-manifest.json
.admit/prompts/: implementer.system.md  implementer.user.template.md  planner.system.md  planner.user.template.md
.admit/rulesets/: software-lens-v0.json
.admit/schemas/: plan-artifact.v0.schema.json  proposal-manifest.v0.schema.json
.github/workflows/: admit-approval-rerun.yml  ci.yml
crates/admit_book/: Cargo.toml
crates/admit_cli/: Cargo.toml
crates/admit_cli/src/: artifact.rs  calc_commands.rs  court.rs  engine.rs  ingest_cache.rs  ingest_dir.rs  ingest_protocol.rs  internal.rs  ledger.rs  lib.rs  main.rs  obsidian_adapter.rs  ollama_defaults.rs  plan.rs  project_init.rs  registry.rs  rust_ir_lint.rs  scope_commands.rs  scope_enablement.rs  scope_validation.rs  status_summary.rs  types.rs  vault_prefix.rs  vault_schema_lint.rs  verify.rs  witness.rs
crates/admit_cli/src/commands/: ci_check.rs  court.rs  engine.rs  git.rs  lint.rs  mod.rs  projection.rs  vault.rs  visualize.rs
crates/admit_cli/tests/: artifact_list.rs  calc_integration.rs  check.rs  ci_command.rs  court_artifacts.rs  declare_cost.rs  engine_artifacts.rs  execute.rs  ingest_gitignore.rs  ingest_incremental_cache.rs  init_project.rs  ledger_append.rs  lens_delta.rs  lens_update.rs  plan_markdown.rs  plan_new.rs  registry.rs  ruleset_check.rs  rust_ir_lint.rs  status_summary.rs  surrealdb_projection_sql.rs  v2_lineage.rs  verify_ledger.rs  verify_ledger_fixtures.rs  visualize.rs
crates/admit_core/: Cargo.toml
crates/admit_dag/: Cargo.toml
crates/admit_dsl/: Cargo.toml
crates/admit_embed/: Cargo.toml
crates/admit_scope_deps/: Cargo.toml
crates/admit_scope_git/: Cargo.toml
crates/admit_scope_github/: Cargo.toml
crates/admit_scope_ingest/: Cargo.toml
crates/admit_scope_ingest/src/: backend.rs  lib.rs  provider_impl.rs
crates/admit_scope_obsidian/: Cargo.toml
crates/admit_scope_rust/: Cargo.toml
crates/admit_scope_rust/src/: backend.rs  extractor.rs  file_walker.rs  lib.rs  provider_impl.rs
crates/admit_scope_text/: Cargo.toml
crates/admit_scope_vault/: Cargo.toml
crates/admit_surrealdb/: Cargo.toml
crates/admit_surrealdb/examples/: projection_config_demo.rs
crates/admit_surrealdb/src/: ingest_events.rs  ingest_run.rs  lib.rs  link_resolver.rs  obsidian_projection.rs  projection_config.rs  projection_events.rs  projection_run.rs  projection_store.rs
crates/facts_bundle/: Cargo.toml
crates/program_bundle/: Cargo.toml
crates/vault_snapshot/: Cargo.toml
docs/: OPERATIONS.md  README.md
docs/arch/: README.md
docs/ideas/: README.md
docs/spec/: admissibility-ir.md  agent-plan-contract.md  cli-protocol.md  provider-protocol.md  rules.md  ruleset-deps-manifest.example.json  ruleset-git-working-tree.example.json  ruleset-text-metrics.example.json  witness-format.md
docs/status/: README.md  self-audit-2026-02-11.md  text-metrics-deep-dive-2026-02-11.md
meta/: Architecture.md  Boundary Events & DB Scope.md  Compiler Runtime Loop.md  DAG.md  Ingestion Protocol.md  Irreversibility-First Design.md  Meta Scope Governance.md  Pattern Evidence Pipeline.md  README.md  Registry Scope Architecture.md  Scope Primitives & Algebras.md  Scope Wiki.md  Semantic Deadlock & Scope Registry.md  buzzing-giggling-snail.md  calculator-scope.md  compiler-progress-summary.md  context-checkpoint-compaction.md  encode-canonical-scope-contract.md  formatextractors.md  git-diff-scope-contract.md  git-provenance-scope-contract.md  git-snapshot-scope-contract.md  hash-scope-contract.md  hash-verify-scope-contract.md  identity-delegate-scope-contract.md  identity-verify-scope-contract.md  implementation-progress-summary.md  language-scopes.md  metascope.md  patch-plan-scope-contract.md  performance.md  phase0-implementation-summary.md  phase1-implementation-summary.md  projection-configuration-guide.md  refactoridea.answers.json  refactoridea.md  refactoridea.plan.md  rust+git.md  scope-addition-witness-wire-format.md  scopegit.md  (+2 more)
meta/design/: book-template.tex  irrevbook.sty  stabilization.md
(+186 files in other folders)
