[package]
name = "admit_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
admit_core = { path = "../admit_core" }
admit_dag = { path = "../admit_dag" }
admit_embed = { path = "../admit_embed" }
admit_surrealdb = { path = "../admit_surrealdb" }
admit_scope_obsidian = { path = "../admit_scope_obsidian" }
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_cbor = "0.11"
syn = { version = "2.0.98", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4.3"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
vault_snapshot = { path = "../vault_snapshot" }
program_bundle = { path = "../program_bundle" }
facts_bundle = { path = "../facts_bundle" }

[dev-dependencies]
tempfile = "3.8"
