[package]
name = "admit_scope_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
admit_core = { path = "../admit_core" }
admit_dag = { path = "../admit_dag" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
syn = { version = "2.0", features = ["full"] }
