[package]
name = "admit_scope_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
admit_core = { path = "../admit_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
