[package]
name = "admit_surrealdb"
version = "0.1.0"
edition = "2021"

[dependencies]
admit_core = { path = "../admit_core" }
admit_dag = { path = "../admit_dag" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
